--- a/pay.html
+++ b/pay.html
@@ -71,7 +71,7 @@
           s.setAttribute('d-currency',"USD") //货币类型，必须
           s.setAttribute('d-email',"customer@glocash.com") //用户邮箱，必须
           s.setAttribute('d-invoice',orderId) //订单号，由服务器生成
-          s.setAttribute('d-sandbox','1') 
+          s.setAttribute('d-sandbox','1') //测试环境
           s.setAttribute('d-method','C01') 
           s.setAttribute('d-urlpost','0') 
           s.setAttribute('d-suceess','http://192.168.1.62:5500/index.html?result=success') 
